# CsharpPythonProject

./: CsharpPythonProject.sln
.nuke/: build.schema.json
example/: main.py  pyproject.toml
python_interface/: .gitignore  pyproject.toml
python_interface/src/python_interface/: __init__.py
