[project]
name = "python-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew Freestone", email = "matthewfreestone1593@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pythonnet>=3.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Source root
sources = ["src"]

# Include everything under src/
include = [
  "src/**"
]

[tool.hatch.build.targets.wheel]
# Only include your actual package
only-include = ["src/python_interface"]